# flutter_web_wasm

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html  pubspec.yaml
example/: flutter_web_wasm_example.dart  pubspec.yaml
example/lib/: main.dart
example/web/: flutter_web_wasm.js  flutter_web_wasm_bg.wasm  index.html
lib/: flutter_web_wasm.dart
lib/src/: flutter_web_wasm_base.dart
src/: lib.rs
test/: flutter_web_wasm_test.dart
